List empty state handling
Added support to handle empty data by binding state to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="empty_note_message">No notes added. Click on the + button to add notes</string>
 </resources>
