--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
     <string name="empty_note_message">No notes added. Click on the + button to add notes</string>
+    <string name="edit_title_placeholder">Enter title </string>
+    <string name="edit_note_content_placeholder">Add content</string>
 </resources>
