Note cell UI refactor
Added bullet icon to string and card layout polishing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="edit_note_content_placeholder">Add content</string>
     <string name="no_title_message">Please add a title to save.</string>
     <string name="no_content_message">Please add some content to save</string>
+    <string name="note_item_title">\\u2022 %s</string>
 </resources>
